src/objects/ZZ_Enviroment_Release__c.object
<CustomObject>
    <fields>
        <fullName>Deployed_Date__c</fullName>
        <label>Deployed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enviroment__c</fullName>
        <label>Enviroment</label>
        <referenceTo>ZZ_Enviroment__c</referenceTo>
        <relationshipName>Enviroment_Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>ZZ_Release__c</referenceTo>
        <relationshipName>Enviroment_Releases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ZZ Enviroment Release</label>
    <nameField>
        <displayFormat>EnviromentRelease-{000000}</displayFormat>
        <label>Enviroment Release Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZZ Enviroment Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>